// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toggleGroup > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
    >
      <fieldset
        class="styles__h1hrwa0"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.75rem_xxsmall__xf61n45p"
        >
          <div
            class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          >
            <legend
              class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
          >
            <label
              aria-disabled="false"
              class="styles__1hngnvm9 styles_disabled_false__1hngnvma styles_labelPosition_right__1hngnvmd"
              for="_r_3_"
            >
              <div
                class="styles__xf61n40 styles_alignItems_baseline_xxsmall__xf61n41j styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
              >
                <div
                  class="styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_gap_0.5rem_xxsmall__1w3vbem2j"
                  style="--_85qyp70: auto 1fr; --_85qyp71: auto 1fr; --_85qyp72: auto 1fr; --_85qyp73: auto 1fr; --_85qyp74: auto 1fr; --_85qyp75: auto 1fr;"
                >
                  <span
                    class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                    for="_r_3_"
                  >
                    Toggle 1
                  </span>
                </div>
              </div>
              <div
                class="styles__1hngnvm0 styles_disabled_false__1hngnvm1 styles_error_false__1hngnvm3 styles_size_large__1hngnvm5"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__1hngnvm8"
                  id="_r_3_"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="styles__1hngnvm9 styles_disabled_false__1hngnvma styles_labelPosition_right__1hngnvmd"
              for="_r_9_"
            >
              <div
                class="styles__xf61n40 styles_alignItems_baseline_xxsmall__xf61n41j styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
              >
                <div
                  class="styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_gap_0.5rem_xxsmall__1w3vbem2j"
                  style="--_85qyp70: auto 1fr; --_85qyp71: auto 1fr; --_85qyp72: auto 1fr; --_85qyp73: auto 1fr; --_85qyp74: auto 1fr; --_85qyp75: auto 1fr;"
                >
                  <span
                    class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                    for="_r_9_"
                  >
                    Toggle 2
                  </span>
                </div>
              </div>
              <div
                class="styles__1hngnvm0 styles_disabled_false__1hngnvm1 styles_error_false__1hngnvm3 styles_size_large__1hngnvm5"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__1hngnvm8"
                  id="_r_9_"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`toggleGroup > renders correctly with direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
    >
      <fieldset
        class="styles__h1hrwa0"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.75rem_xxsmall__xf61n45p"
        >
          <div
            class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          >
            <legend
              class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v"
          >
            <label
              aria-disabled="false"
              class="styles__1hngnvm9 styles_disabled_false__1hngnvma styles_labelPosition_right__1hngnvmd"
              for="_r_i_"
            >
              <div
                class="styles__xf61n40 styles_alignItems_baseline_xxsmall__xf61n41j styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
              >
                <div
                  class="styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_gap_0.5rem_xxsmall__1w3vbem2j"
                  style="--_85qyp70: auto 1fr; --_85qyp71: auto 1fr; --_85qyp72: auto 1fr; --_85qyp73: auto 1fr; --_85qyp74: auto 1fr; --_85qyp75: auto 1fr;"
                >
                  <span
                    class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                    for="_r_i_"
                  >
                    Toggle 1
                  </span>
                </div>
              </div>
              <div
                class="styles__1hngnvm0 styles_disabled_false__1hngnvm1 styles_error_false__1hngnvm3 styles_size_large__1hngnvm5"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__1hngnvm8"
                  id="_r_i_"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="styles__1hngnvm9 styles_disabled_false__1hngnvma styles_labelPosition_right__1hngnvmd"
              for="_r_o_"
            >
              <div
                class="styles__xf61n40 styles_alignItems_baseline_xxsmall__xf61n41j styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
              >
                <div
                  class="styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_gap_0.5rem_xxsmall__1w3vbem2j"
                  style="--_85qyp70: auto 1fr; --_85qyp71: auto 1fr; --_85qyp72: auto 1fr; --_85qyp73: auto 1fr; --_85qyp74: auto 1fr; --_85qyp75: auto 1fr;"
                >
                  <span
                    class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                    for="_r_o_"
                  >
                    Toggle 2
                  </span>
                </div>
              </div>
              <div
                class="styles__1hngnvm0 styles_disabled_false__1hngnvm1 styles_error_false__1hngnvm3 styles_size_large__1hngnvm5"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__1hngnvm8"
                  id="_r_o_"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`toggleGroup > renders correctly with error content 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
    >
      <fieldset
        aria-describedby="_r_1f_"
        class="styles__h1hrwa0"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.75rem_xxsmall__xf61n45p"
        >
          <div
            class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          >
            <legend
              class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
          >
            <label
              aria-disabled="false"
              class="styles__1hngnvm9 styles_disabled_false__1hngnvma styles_labelPosition_right__1hngnvmd"
              for="_r_1i_"
            >
              <div
                class="styles__xf61n40 styles_alignItems_baseline_xxsmall__xf61n41j styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
              >
                <div
                  class="styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_gap_0.5rem_xxsmall__1w3vbem2j"
                  style="--_85qyp70: auto 1fr; --_85qyp71: auto 1fr; --_85qyp72: auto 1fr; --_85qyp73: auto 1fr; --_85qyp74: auto 1fr; --_85qyp75: auto 1fr;"
                >
                  <span
                    class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                    for="_r_1i_"
                  >
                    Toggle 1
                  </span>
                </div>
              </div>
              <div
                class="styles__1hngnvm0 styles_disabled_false__1hngnvm1 styles_error_true__1hngnvm4 styles_size_large__1hngnvm5"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="true"
                  class="styles__1hngnvm8"
                  id="_r_1i_"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="styles__1hngnvm9 styles_disabled_false__1hngnvma styles_labelPosition_right__1hngnvmd"
              for="_r_1o_"
            >
              <div
                class="styles__xf61n40 styles_alignItems_baseline_xxsmall__xf61n41j styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
              >
                <div
                  class="styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_gap_0.5rem_xxsmall__1w3vbem2j"
                  style="--_85qyp70: auto 1fr; --_85qyp71: auto 1fr; --_85qyp72: auto 1fr; --_85qyp73: auto 1fr; --_85qyp74: auto 1fr; --_85qyp75: auto 1fr;"
                >
                  <span
                    class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                    for="_r_1o_"
                  >
                    Toggle 2
                  </span>
                </div>
              </div>
              <div
                class="styles__1hngnvm0 styles_disabled_false__1hngnvm1 styles_error_true__1hngnvm4 styles_size_large__1hngnvm5"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="true"
                  class="styles__1hngnvm8"
                  id="_r_1o_"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
      <span
        class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_danger__1do42ls9 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_48__1do42ls2m"
        id="_r_1f_"
        role="status"
      >
        Eror content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`toggleGroup > renders correctly with helper content 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
    >
      <fieldset
        aria-describedby="_r_u_"
        class="styles__h1hrwa0"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.75rem_xxsmall__xf61n45p"
        >
          <div
            class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          >
            <legend
              class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
          >
            <label
              aria-disabled="false"
              class="styles__1hngnvm9 styles_disabled_false__1hngnvma styles_labelPosition_right__1hngnvmd"
              for="_r_11_"
            >
              <div
                class="styles__xf61n40 styles_alignItems_baseline_xxsmall__xf61n41j styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
              >
                <div
                  class="styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_gap_0.5rem_xxsmall__1w3vbem2j"
                  style="--_85qyp70: auto 1fr; --_85qyp71: auto 1fr; --_85qyp72: auto 1fr; --_85qyp73: auto 1fr; --_85qyp74: auto 1fr; --_85qyp75: auto 1fr;"
                >
                  <span
                    class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                    for="_r_11_"
                  >
                    Toggle 1
                  </span>
                </div>
              </div>
              <div
                class="styles__1hngnvm0 styles_disabled_false__1hngnvm1 styles_error_false__1hngnvm3 styles_size_large__1hngnvm5"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__1hngnvm8"
                  id="_r_11_"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="styles__1hngnvm9 styles_disabled_false__1hngnvma styles_labelPosition_right__1hngnvmd"
              for="_r_17_"
            >
              <div
                class="styles__xf61n40 styles_alignItems_baseline_xxsmall__xf61n41j styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
              >
                <div
                  class="styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_gap_0.5rem_xxsmall__1w3vbem2j"
                  style="--_85qyp70: auto 1fr; --_85qyp71: auto 1fr; --_85qyp72: auto 1fr; --_85qyp73: auto 1fr; --_85qyp74: auto 1fr; --_85qyp75: auto 1fr;"
                >
                  <span
                    class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                    for="_r_17_"
                  >
                    Toggle 2
                  </span>
                </div>
              </div>
              <div
                class="styles__1hngnvm0 styles_disabled_false__1hngnvm1 styles_error_false__1hngnvm3 styles_size_large__1hngnvm5"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__1hngnvm8"
                  id="_r_17_"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
      <span
        class="style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
        id="_r_u_"
        role="status"
      >
        Helper content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`toggleGroup > renders correctly with required prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
    >
      <fieldset
        class="styles__h1hrwa0"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.75rem_xxsmall__xf61n45p"
        >
          <div
            class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          >
            <div
              class="styles__xf61n40 styles_alignItems_flex-start_xxsmall__xf61n4v styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.25rem_xxsmall__xf61n45j"
            >
              <legend
                class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
              >
                Label
              </legend>
              <span
                class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_danger__1do42ls9 style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_48__1do42ls2m"
              >
                *
              </span>
            </div>
          </div>
          <div
            class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v"
          >
            <label
              aria-disabled="false"
              class="styles__1hngnvm9 styles_disabled_false__1hngnvma styles_labelPosition_right__1hngnvmd"
              for="_r_25_"
            >
              <div
                class="styles__xf61n40 styles_alignItems_baseline_xxsmall__xf61n41j styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
              >
                <div
                  class="styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_gap_0.5rem_xxsmall__1w3vbem2j"
                  style="--_85qyp70: auto 1fr; --_85qyp71: auto 1fr; --_85qyp72: auto 1fr; --_85qyp73: auto 1fr; --_85qyp74: auto 1fr; --_85qyp75: auto 1fr;"
                >
                  <span
                    class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                    for="_r_25_"
                  >
                    Toggle 1
                  </span>
                </div>
              </div>
              <div
                class="styles__1hngnvm0 styles_disabled_false__1hngnvm1 styles_error_false__1hngnvm3 styles_size_large__1hngnvm5"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__1hngnvm8"
                  id="_r_25_"
                  name="Toggle.value-1"
                  type="checkbox"
                  value="value-1"
                />
              </div>
            </label>
            <label
              aria-disabled="false"
              class="styles__1hngnvm9 styles_disabled_false__1hngnvma styles_labelPosition_right__1hngnvmd"
              for="_r_2b_"
            >
              <div
                class="styles__xf61n40 styles_alignItems_baseline_xxsmall__xf61n41j styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
              >
                <div
                  class="styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_gap_0.5rem_xxsmall__1w3vbem2j"
                  style="--_85qyp70: auto 1fr; --_85qyp71: auto 1fr; --_85qyp72: auto 1fr; --_85qyp73: auto 1fr; --_85qyp74: auto 1fr; --_85qyp75: auto 1fr;"
                >
                  <span
                    class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
                    for="_r_2b_"
                  >
                    Toggle 2
                  </span>
                </div>
              </div>
              <div
                class="styles__1hngnvm0 styles_disabled_false__1hngnvm1 styles_error_false__1hngnvm3 styles_size_large__1hngnvm5"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="styles__1hngnvm8"
                  id="_r_2b_"
                  name="Toggle.value-2"
                  type="checkbox"
                  value="value-2"
                />
              </div>
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;
